# coffea-workflow

./: .gitignore  README.md  __init__.py  config.py  example.ipynb  ir.py  pyproject.toml  registry.py  run_on_lxplus.sh  util.py
.github/workflows/: coffea-compat.yml
analysisSteps/: dataset_creation.py
analysisSteps/.ipynb_checkpoints/: _shared-checkpoint.py  coffea_run-checkpoint.py  merge-checkpoint.py  partition-checkpoint.py  plot_histograms-checkpoint.py  validate_histograms-checkpoint.py
backends/: local.py
example/: analysis.py  workflow.ipynb
examples/agc_ttbar/: README.md  ttbar_analysis.py  ttbar_workflow.ipynb
examples/agc_ttbar/cms-open-data-ttbar/: histograms.root  histograms_ml.root  (+4 more)
examples/coffea_workflow/: README.md  analysis.py  workflow.ipynb
examples/coffea_workflow_histserv/: README.md  analysis.py  analysis_hist.py  workflow.ipynb  workflow_hist.ipynb
examples/coffea_workflow_snakemake/: Snakefile  analysis.py  config.yaml
examples/showcase/: analysis.py  analysis_with_failure.py  workflow_examples.ipynb
pseudocode/: README.md
src/coffea_workflow/: __init__.py  artifacts.py  config.py  default_producers.py  deps.py  executor.py  facilities.py  identity.py  producers.py  producers_utils.py  render.py  workflow.py
src/workflow/: __init__.py  artifacts.py  config.py  default_producers.py  executor.py  identity.py  producers_utils.py  render.py  snakemake_producers.py  workflow.py
tests/: conftest.py  test_artifacts.py  test_config.py  test_default_producers.py  test_executor.py  test_render.py  test_snakemake_producers.py
(+1512 files in other folders)
