[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coffea_workflow"
version = "0.1.0"
dependencies = [
    "coffea @ git+https://github.com/hooloobooroodkoo/coffea.git@processor_result_type",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
